2006-06-16  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c (send_message): New function that send message
						to stderr and/or amrecover.
	* restore-src/restore.c: Call send_message on some error path.

2006-06-16  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/event.c (event_loop_wait, event_wait): Take an
					 event_handle_t * as parameter.
	* common-src/event.h: New prototype.
	* common-src/bsd-security.c: Call event_wait(bs->ev_read).
	* common-src/krb4-security.c: Call event_wait(ks->ev_read).
	* common-src/krb5-security.c: Call event_wait(ks->ev_read).
	* common-src/security-util.c: Call event_wait(ss->ev_read).

2006-06-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: -w doesn't change the test selection.
	* man/xml-source/amcheck.8.xml: Document.

2006-06-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Log empty disklist and no DLE selected.

2006-06-14  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsd-security.c: Use %u to print in_port_t data.
	* common-src/bsdudp-security.c: Ditto.

2006-06-14  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-disk.sh.in: Return the number of slot in output of
				      the -info command.
	* changer-src/chg-zd-mtx.sh.in: Ditto.

2006-06-14  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-zd-mtx.sh.in: Accept changerfile that already
					have the .conf suffix.

2006-06-13  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c (s_ackwait): Resend the REP on receive of a
					     duplicate REQ.

2006-06-13  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c (bsd_recv_security_ok): Set error only
	  if we get an error.

2006-06-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: usetimestamps is a warning.

2006-06-12  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c (process_writenetfd): Close the pipe if the